# istio_wasm_playground

./: readme.md
1_istio_wasm_rust_hello_header/src/: lib.rs
2_istio_wasme_rust_hello/: Cargo.toml  bazel-bin  bazel-testlogs  filter.rs
2_istio_wasme_rust_hello/bazel/cargo/: BUILD.bazel
2_istio_wasme_rust_hello/bazel/cargo/remote/: BUILD.getrandom-0.2.8.bazel  BUILD.proxy-wasm-0.2.0.bazel
istio_wasm_rust_hello_header/: runtime-config.json
xp1_istio_wasm_rust_hello_header/: Cargo.toml  istio_wasm_rust_hello_header.wasm  readme.md
xp2_istio_wasme_rust_hello/: WORKSPACE  bazel-out  bazel-workspace  echoserver_wasmplugin.yaml  readme.md
xp2_istio_wasme_rust_hello/bazel/cargo/: crates.bzl
xp2_istio_wasme_rust_hello/bazel/cargo/remote/: BUILD.ahash-0.7.6.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.libc-0.2.137.bazel  BUILD.log-0.4.17.bazel  BUILD.once_cell-1.15.0.bazel  BUILD.wasi-0.11.0+wasi-snapshot-preview1.bazel
xp3_istio_wasme_rust_hello_header/: Cargo.toml  echoserver_wasmplugin.yaml  readme.md  xp3_istio_wasme_rust_hello_header.wasm
xp3_istio_wasme_rust_hello_header/src/: lib.rs
xp4_istio_wasme_rust/: Cargo.toml  Makefile  echoserver_wasmplugin.yaml  readme.md  runtime-config.json  xp4_istio_wasme_rust.wasm
xp4_istio_wasme_rust/src/: config.rs  lib.rs
