[package]
name = "xp4_istio_wasme_rust"
version = "0.1.0"
edition = "2021"
authors = [ "dxps <marius.ileana@gmail.com" ]
license = "Apache-2.0"
keywords = [ "istio-proxy", "proxy-wasm", "wasm" ]

  
[lib]
path = "src/lib.rs"
crate-type = [ "cdylib" ]


[dependencies]
log = "0.4.17"
proxy-wasm = "0.2.0"
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.87"
